# back-end/handlers/repository_delete.go
@@ -1,69 +1,74 @@
 package handlers
 
 import (
-    //"fmt"
-    //"github.com/gorilla/mux"
-    //"github.com/icaroribeiro/ee-code-challenge/back-end/models"
+    "fmt"
+    "github.com/gorilla/mux"
+    "github.com/icaroribeiro/ee-code-challenge/back-end/models"
     "github.com/icaroribeiro/ee-code-challenge/back-end/server"
-    //"github.com/icaroribeiro/ee-code-challenge/back-end/utils"
+    "github.com/icaroribeiro/ee-code-challenge/back-end/utils"
     "net/http"
-    //"strconv"
 )
 
 func DeleteUserRepository(s *server.Server) http.HandlerFunc {
     return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-        /*var params map[string]string
-        var bookId int
-        var book models.Book
+        var params map[string]string
+        var userId string
+        var repositoryId string
+        var userRepository models.UserRepository
         var err error
         var nDeletedDocs int64
 
         params = mux.Vars(r)
 
-        if params["bookId"] == "" {
+        userId = params["userId"]
+
+        if userId == "" {
             utils.RespondWithJson(w, http.StatusBadRequest, 
-                map[string]string{"error": "The id is required and must be set to a non-empty value in the request URL"})
+                map[string]string{"error": "The user id is required and must be set to a non-empty value in the request URL"})
             return
         }
 
-        bookId, err = strconv.Atoi(params["bookId"])
+        repositoryId = params["repositoryId"]
 
-        if err != nil {
+        if repositoryId == "" {
             utils.RespondWithJson(w, http.StatusBadRequest, 
-                map[string]string{"error": fmt.Sprintf("Failed to convert the string %s to a numeric value", params["bookId"])})
+                map[string]string{"error": "The repository id is required and must be set to a non-empty value in the request URL"})
             return
         }
 
-        book, err = s.Datastore.GetBook(bookId)
+        userRepository, err = s.Datastore.GetUserRepository(userId, repositoryId)
 
         if err != nil {
             utils.RespondWithJson(w, http.StatusInternalServerError, 
-                map[string]string{"error": fmt.Sprintf("Failed to get the book with the id %d: %s", bookId, err.Error())})
+                map[string]string{"error": fmt.Sprintf("Failed to get the user repository with the user id %s and " +
+                    "repository id %s: %s", userId, repositoryId, err.Error())})
             return
         }
 
-        nDeletedDocs, err = s.Datastore.DeleteBook(bookId)
+        nDeletedDocs, err = s.Datastore.DeleteUserRepository(userId, repositoryId)
 
         if err != nil {
             utils.RespondWithJson(w, http.StatusInternalServerError, 
-                map[string]string{"error": fmt.Sprintf("Failed to delete the book with the id %d: %s", bookId, err.Error())})
+                map[string]string{"error": fmt.Sprintf("Failed to delete the user repository with the user id %s and " + 
+                    "repository id %s: %s", userId, repositoryId, err.Error())})
             return
         }
 
         if nDeletedDocs == 0 {
             utils.RespondWithJson(w, http.StatusNotFound, 
-                map[string]string{"error": fmt.Sprintf("Failed to delete the book with the id %d: the book wasn't found", bookId)})
+                map[string]string{"error": fmt.Sprintf("Failed to delete the user repository with the user id %s and " + 
+                    "repository id %s: the user repository wasn't found", userId, repositoryId, err.Error())})
             return
         }
 
         if nDeletedDocs > 1 {
             utils.RespondWithJson(w, http.StatusInternalServerError, 
-                map[string]string{"error": fmt.Sprintf("Failed to delete the book with the id %d: the expected number of " +
-                    "books deleted: %d, got: %d", bookId, 1, nDeletedDocs)})
+                map[string]string{"error": fmt.Sprintf("Failed to delete the user repository with the user id %s and " + 
+                    "repository id %s: the expected number of user repositories deleted: %d, got: %d", 
+                    userId, repositoryId, 1, nDeletedDocs)})
             return
         }
 
-        utils.RespondWithJson(w, http.StatusOK, book)
-        */
+        utils.RespondWithJson(w, http.StatusOK, userRepository)
     })
 }
